Fixed Header Not Centered

--- a/Style.css
+++ b/Style.css
@@ -11,6 +11,7 @@ h1 {
     font-size: 5.5vh;
     font-weight: bold;
     color:purple;
+    text-align: center;
 }
 h2,h3 {
     font-size: 4vh;
